--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
 body { 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Rajdhani', sans-serif;
     background-color: rgb(230, 235, 235);
 }
 
 header {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
     background-image: url(img/Logo\ overtone.jpg);
@@ -21,7 +23,44 @@ header {
     background-position: left center;
 }
 header > h1 {
-        padding: 30px;
-        font-size: 3em;
+    margin: auto;
+    padding-left: 3%;
+    padding-top: 20px;
+    padding-bottom: 45px;
+    font-size: 4.5em;
+    text-align: center;
+    font-weight: normal;
+    text-shadow: -1px 0px 12px white;
+    letter-spacing: 30px;
 }
 
+header > nav > a {
+    font-size: 1.1em;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    margin: 30px;
+}
+header a:hover {
+    padding: 5px;
+    border-radius: 10px;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.479), rgba(255, 255, 255, 0.274), rgba(255, 255, 255, 0.199));
+}
+
+.container {
+    width: 85%;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    padding-bottom: 30px;
+    background-color: white;
+    box-shadow: 0px 4px 20px 0px #00000026;
+    border-radius: 0px 0px 10px 10px;
+}
+
+footer {
+    text-align: center;
+    padding: 5px;
+    font-size: 1.2em;
+    color: white;
+    background-color: black;
+}
