--- a/style.css
+++ b/style.css
@@ -7,67 +7,46 @@
     padding: 0px;
 }
 
-body { 
+ body { 
+    min-width: 100vh;
     font-family: 'Rajdhani', sans-serif;
     background-color: rgb(230, 235, 235);
 }
 
 header {
+    
     background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
-    background-image: url(img/Logo\ overtone.jpg);
-    background-repeat: no-repeat;
-    height: 200px;
-    background-size: 200px;
-    background-position: left center;
+   
 }
 header > h1 {
-    margin: auto;
-    padding-left: 3%;
-    padding-top: 20px;
-    padding-bottom: 15px;
-    font-size: 4.5em;
-    text-align: center;
+   
+    font-variant: small-caps;
+    padding-top: 30px;
     font-weight: normal;
-    text-shadow: -1px 0px 12px white;
-    letter-spacing: 30px;
+    font-size: 5em;
+    letter-spacing: 20px;
 }
-
-header button {
-    background-color: rgb(41, 40, 40);
-    font-size: 1em;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    padding: 6px;
-    border-radius: 6px;
-    margin: 25px;
-}
-header a {
+nav > a {
     color: white;
     text-decoration: none;
+    border-radius: 5px;
+    font-weight: normal;
+    padding: 10px;
+    transition-duration: .3s;
 }
-header button:hover {
-    transform: translate(-1px, -1px);
-    transition: transform 0.2s;
-}
-   
 
-.container {
-    width: 85%;
+main {
+    min-width: 200px;
+    max-width: 100vh;
     margin: auto;
     margin-bottom: 30px;
     padding: 20px;
-    padding-bottom: 30px;
     background-color: white;
-    box-shadow: 0px 4px 20px 0px #00000026;
     border-radius: 0px 0px 10px 10px;
 }
+  
 
-footer {
-    text-align: center;
-    padding: 5px;
-    font-size: 1.2em;
-    color: white;
-    background-color: black;
-}
+
+
