--- a/style.css
+++ b/style.css
@@ -7,29 +7,34 @@
     padding: 0px;
 }
 
- body { 
-    min-width: 100vh;
+ html, body { 
+    min-height: 100vh;
     font-family: 'Rajdhani', sans-serif;
     background-color: rgb(230, 235, 235);
 }
 
 header {
-    
     background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
-   
 }
 header > h1 {
-   
-    font-variant: small-caps;
+    font-size: 10vw;
     padding-top: 30px;
     font-weight: normal;
-    font-size: 5em;
     letter-spacing: 20px;
+}
+header h1:hover {
+    text-shadow: -3px 3px 12px white;
+    transition: 0.5s;
+}
+header a:active {
+    color: rgb(204, 174, 243);
+    transition: 0.5s;
 }
 nav > a {
     color: white;
+    text-shadow: 0px -1px 3px white;
     text-decoration: none;
     border-radius: 5px;
     font-weight: normal;
@@ -38,8 +43,9 @@ nav > a {
 }
 
 main {
-    min-width: 200px;
-    max-width: 100vh;
+    
+    min-width: 100px;
+    max-width: 1000px;
     margin: auto;
     margin-bottom: 30px;
     padding: 20px;
