--- a/style.css
+++ b/style.css
@@ -10,45 +10,46 @@
  html, body { 
     min-height: 100vh;
     font-family: 'Rajdhani', sans-serif;
-    background-color: rgb(230, 235, 235);
+    background-color: rgba(203, 216, 250, 0.534);
 }
 
-header {
-    height: 100vh;
+/*-------------------------------------------*/
+
+header { 
+    
     color: white;
     text-align: center;
-
 }
-header.cabeca {
-    background: black url(img/Marca\ Horizontal\ Branca.png) center no-repeat ;
-    background-size: cover;
-    
+header > nav.cabeca {
+    background-color: rgba(0, 0, 0, 0.849);
+    padding: 20px;
 }
-.cabeca:hover {
-    block-size: 400px;
-    transition: 1s;
+header > div.imagem {
+    height: 100vh;
+    background-color: rgb(0, 0, 0);
 }
-.cabeca::before {
-    content: "";
-    height: 400px;
+#img {
+    position: center;
+    height: 65vw;
+    -webkit-transition: width 1s, height 1s, background-color 1s, -webkit-transform 1s;
+    transition: width 1s, height 1s, background-color 1s, transform 1s;
 }
-
-
 header a {
     font-weight: normal;
     font-size: 1.1em;
     color: white;
     text-decoration: none;
-    padding: 10px;
+    padding: 7px;
 }
 header a:hover {
     color: rgb(204, 174, 243);
-    text-shadow: 0px -1px 3px white;
-    transition: 0.3s;
+    text-shadow: 0px -1px 3px rgb(0, 0, 0);
+    transition: 0.2s;
 }
 
+/*-------------------------------------------*/
+
 main {
-    
     min-width: 100px;
     max-width: 1000px;
     margin: auto;
@@ -56,6 +57,7 @@ main {
     padding: 20px;
     background-color: white;
     border-radius: 0px 0px 10px 10px;
+    box-shadow: 1px 2px 20px 0px rgba(0, 0, 0, 0.377);;
 }
   
 
