--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@
 }
 
  html, body { 
-    min-height: 100vh;
+    height: 100vh;
     font-family: 'Rajdhani', sans-serif;
     background-color: rgba(203, 216, 250, 0.534);
 }
-
+body::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
 /*-------------------------------------------*/
 
 header { 
@@ -34,6 +37,7 @@ header > div.imagem {
     -webkit-transition: width 1s, height 1s, background-color 1s, -webkit-transform 1s;
     transition: width 1s, height 1s, background-color 1s, transform 1s;
 }
+
 header a {
     font-weight: normal;
     font-size: 1.1em;
@@ -42,7 +46,7 @@ header a {
     padding: 7px;
 }
 header a:hover {
-    color: rgb(204, 174, 243);
+    color: rgb(199, 225, 250);
     text-shadow: 0px -1px 3px rgb(0, 0, 0);
     transition: 0.2s;
 }
@@ -53,13 +57,34 @@ main {
     min-width: 100px;
     max-width: 1000px;
     margin: auto;
-    margin-bottom: 30px;
     padding: 20px;
+    padding-bottom: 20px;
     background-color: white;
     border-radius: 0px 0px 10px 10px;
     box-shadow: 1px 2px 20px 0px rgba(0, 0, 0, 0.377);;
 }
-  
+main > h1 {
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.219);
+}
+
+footer {
+    text-align: center;
+    color: white;
+    background-color: black;
+    padding: 10px;
+    margin-top: 30px;
+}
+footer a {
+    color: white;
+    text-decoration: none;
+}
+footer a:hover {
+    color: rgb(158, 208, 255);
+    transition: 0.3s;
+}
 
 
 
